<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/p"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:onClick="star"
        android:text="@string/enter"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="85dp"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:text="@string/lucky_numbers_game"
        android:textColor="#673AB7"
        android:textSize="34sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="348dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textColorHint="#331C1C"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>