<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="678dp"
        android:layout_height="1122dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/todo3" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="260dp"
        android:layout_height="59dp"
        android:layout_marginTop="116dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/guess_the_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#0B0505"

        android:textColorHint="#37474F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="261dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/don_t_worry_i_sak_help_you_to_get_the_number"
        android:textColor="#0C0909"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <TextView
        android:id="@+id/guide"
        android:layout_width="304dp"
        android:layout_height="69dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="#5E32AC"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="318dp"
        android:layout_height="71dp"
        android:layout_marginBottom="296dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="119dp"
        android:layout_height="55dp"
        android:text="@string/submit1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:layout_marginEnd="80dp"
        android:gravity="center|start"
        android:textColor="#B11313"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.56" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="164dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:gravity="center|start"
        android:textColor="#B11313"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.448" />

</androidx.constraintlayout.widget.ConstraintLayout>